Доп секция глав. экрана + адаптив

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Урна ЯР</title>
+    <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="./css/catalog.css">
     <link rel="stylesheet" href="./css/search.css">
     <link rel="stylesheet" href="./css/navbar.css">
@@ -70,7 +71,7 @@
     <section class="catalog">
         <div class="container">
             <div class="catalog-wrap">
-                <h2 class="catalog-title">Каталог</h2>
+                <h2 class="catalog-title">⋯ Каталог ⋯</h2>
                 <div class="catalog-list">
                     <div class="catalog-item">
                         <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
@@ -101,6 +102,17 @@
                 </div>
             </div>     
         </div>
+    </section>
+    <section>
+        <div class="about">
+            <div class="container">
+                <div class="about-wrap">
+                    <h3 class="about-logo">Урны для мусора, уличные урны, урны пепельницы, урны металлические</h3>
+                    <p>Мы предлагаем Вам различные виды урн для мусора, как готовых, так и по Вашим эскизам. Урны проходят порошковую окраску и соответствуют санитарным нормам. Возможна покраска в любой цвет. Окраска выполняется по таблице RAL.</p>
+                </div>
+            </div>
+        </div>
+        .
     </section>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="./assets/js/app.js"></script>
