--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Урна ЯР</title>
+    <link rel="stylesheet" href="./css/form.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/pay.css">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="./css/catalog.css">
     <link rel="stylesheet" href="./css/search.css">
@@ -33,12 +36,13 @@
                     </div>
                     <div class="header-item header__item1">
                         <input class="search-bar" type="text" placeholder="Поиск по сайту...">
+                        <!-- <img src="./assets/img/search.svg" alt="search"> -->
                     </div>
                     <div class="header-btn" href="">
                         ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
                     </div>
                 </div>
-            </div>           
+            </div>
         </div>
         <div class="nav" id='nav'>
             <div class="container">
@@ -71,12 +75,12 @@
     <section class="catalog">
         <div class="container">
             <div class="catalog-wrap">
-                <h2 class="catalog-title">⋯ Каталог ⋯</h2>
+                <h2 class="catalog-title title">⋯ Каталог ⋯</h2>
                 <div class="catalog-list">
                     <div class="catalog-item">
                         <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                         <hr>
-                        <div class="catalog-about">   
+                        <div class="catalog-about">
                             <h3>Урны</h3>
                             <p>В данном каталоге вы найдете урны из разных материалов, разных ценовых категорий.</p>
                         </div>
@@ -86,7 +90,7 @@
                             <img class="catalog-img" src="./assets/img/lavka.jpg" alt="">
                         </div>
                         <hr>
-                        <div class="catalog-about">   
+                        <div class="catalog-about">
                             <h3>Лавки</h3>
                             <p>В данном каталоге вы найдете лавки из разных материалов, разных ценовых категорий.</p>
                         </div>
@@ -94,13 +98,13 @@
                     <div class="catalog-item">
                         <img class="catalog-img" src="./assets/img/art.jpg" alt="">
                         <hr>
-                        <div class="catalog-about">   
+                        <div class="catalog-about">
                             <h3>Ортопедические основания</h3>
                             <p>В данном каталоге вы найдете ортопедические основания разных ценовых категорий.</p>
                         </div>
                     </div>
                 </div>
-            </div>     
+            </div>
         </div>
     </section>
     <section>
@@ -108,14 +112,66 @@
             <div class="container">
                 <div class="about-wrap">
                     <h3 class="about-logo">Урны для мусора, уличные урны, урны пепельницы, урны металлические</h3>
-                    <p>Мы предлагаем Вам различные виды урн для мусора, как готовых, так и по Вашим эскизам. Урны проходят порошковую окраску и соответствуют санитарным нормам. Возможна покраска в любой цвет. Окраска выполняется по таблице RAL.</p>
+                    <p class="typing-demo">Мы предлагаем Вам различные виды урн для мусора, как готовых, так и по Вашим
+                        эскизам. Урны проходят порошковую окраску и соответствуют санитарным нормам. Возможна покраска в
+                        любой цвет. Окраска выполняется по таблице RAL.</p>
                 </div>
             </div>
         </div>
-        .
     </section>
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="./assets/js/app.js"></script>
+    <section>
+        <div class="pay">
+            <div class="container">
+                <div class="pay-wrap">
+                    <h3 class="pay-title title">⋯ Оплата ⋯</h3>
+                    <div class="pay-text">
+                        После выбора нужного для вас товара из ассортимента оставте заявку на консультацию.
+                        Для этого заполните форму ниже и мы с вами свяжемся для уточнения деталей. Оплата осуществляется
+                        удобным для
+                        вас способом
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="send-form">
+            <div class="container">
+                <div class="form-wrapper">
+                    <form action="send" class="form" method="POST">
+                        <h3 class="form-title">⋯ Получить бесплатную консультацию ⋯</h3>
+                        <div class="form-item">
+                            <label class="form-label" for="form-input__name">Имя:</label>
+                            <input type="text" class="form-input form-input__name" placeholder="Введите имя...">
+                        </div>
+                        <div class="form-item">
+                            <label class="form-label" for="form-input__last-name">Фамилия:</label>
+                            <input type="text" class="form-input form-input__last-name" placeholder="Введите фамилию...">    
+                        </div>
+                        <div class="form-item">
+                            <label class="form-label" for="form-input__tel">Номер телефона:</label>
+                            <input type="text" class="form-input form-input__tel" placeholder="Введите номер телефона...">
+                        </div>
+                        <div class="form-item">
+                            <label class="form-label" for="form-input__mail">Номер телефона:</label>
+                            <input type="text" class="form-input form-input__mail" placeholder="Введите адресс почты...">
+                        </div>
+                        <div class="form-item">
+                            <label class="form-label" for="form-input__comment">Ваш комментарий:</label>
+                            <input type="text" class="form-input form-input__comment" placeholder="Введите ваш комментарий...">
+                        </div>
+                        <div class="form-btn" href="">
+                            ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
+                        </div>
+                    </form>
+                    <img class="form-bg" src="./assets/img/form-bg.jpg" alt="form-bg">
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+        integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 
 </html>
