--- a/index.html
+++ b/index.html
@@ -76,31 +76,80 @@
         <div class="container">
             <div class="catalog-wrap">
                 <h2 class="catalog-title title">⋯ Каталог ⋯</h2>
-                <div class="catalog-list">
-                    <div class="catalog-item">
-                        <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
-                        <hr>
-                        <div class="catalog-about">
-                            <h3>Урны</h3>
-                            <p>В данном каталоге вы найдете урны из разных материалов, разных ценовых категорий.</p>
-                        </div>
+                <div class="catalog-split">
+                    <div class="catalog-ul">
+                        <h3 class="cat__title">
+                            Урны
+                        </h3>
+                        <ul class="catalog-cat">
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Перфорация</a>
+                            </li>
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Кованые</a>
+                            </li>
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Деревянные</a>
+                            </li>
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Пепельницы</a>
+                            </li>
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Для раздельного мусора</a>
+                            </li>
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Деревянные</a>
+                            </li>
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Для собачих площадок</a>
+                            </li>
+                        </ul>
+                        <h3 class="cat__title">Лавки</h3>
+                        <ul class="catalog-cat">
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Все</a>
+                            </li>
+                        </ul>
+                        <h3 class="cat__title">Ортопедические основания</h3>
+                        <ul class="catalog-cat">
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Эконом</a>
+                            </li>
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Стандарт</a>
+                            </li>
+                            <li class="cat__item">
+                                <a class="cat__a" href="">Усиленные</a>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="catalog-item">
-                        <div class="img-wrap">
-                            <img class="catalog-img" src="./assets/img/lavka.jpg" alt="">
+    
+                    <div class="catalog-list">
+                        <div class="catalog-item">
+                            <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
+                            <hr>
+                            <div class="catalog-about">
+                                <h3>Урны</h3>
+                                <p>В данном каталоге вы найдете урны из разных материалов, разных ценовых категорий.</p>
+                            </div>
                         </div>
-                        <hr>
-                        <div class="catalog-about">
-                            <h3>Лавки</h3>
-                            <p>В данном каталоге вы найдете лавки из разных материалов, разных ценовых категорий.</p>
+                        <div class="catalog-item">
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/lavka.jpg" alt="">
+                            </div>
+                            <hr>
+                            <div class="catalog-about">
+                                <h3>Лавки</h3>
+                                <p>В данном каталоге вы найдете лавки из разных материалов, разных ценовых категорий.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="catalog-item">
-                        <img class="catalog-img" src="./assets/img/art.jpg" alt="">
-                        <hr>
-                        <div class="catalog-about">
-                            <h3>Ортопедические основания</h3>
-                            <p>В данном каталоге вы найдете ортопедические основания разных ценовых категорий.</p>
+                        <div class="catalog-item">
+                            <img class="catalog-img" src="./assets/img/art.jpg" alt="">
+                            <hr>
+                            <div class="catalog-about">
+                                <h3>Ортопедические основания</h3>
+                                <p>В данном каталоге вы найдете ортопедические основания разных ценовых категорий.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -146,19 +195,23 @@
                         </div>
                         <div class="form-item">
                             <label class="form-label" for="form-input__last-name">Фамилия:</label>
-                            <input type="text" class="form-input form-input__last-name" placeholder="Введите фамилию...">    
+                            <input type="text" class="form-input form-input__last-name"
+                                placeholder="Введите фамилию...">
                         </div>
                         <div class="form-item">
                             <label class="form-label" for="form-input__tel">Номер телефона:</label>
-                            <input type="text" class="form-input form-input__tel" placeholder="Введите номер телефона...">
+                            <input type="text" class="form-input form-input__tel"
+                                placeholder="Введите номер телефона...">
                         </div>
                         <div class="form-item">
                             <label class="form-label" for="form-input__mail">Номер телефона:</label>
-                            <input type="text" class="form-input form-input__mail" placeholder="Введите адресс почты...">
+                            <input type="text" class="form-input form-input__mail"
+                                placeholder="Введите адресс почты...">
                         </div>
                         <div class="form-item">
                             <label class="form-label" for="form-input__comment">Ваш комментарий:</label>
-                            <input type="text" class="form-input form-input__comment" placeholder="Введите ваш комментарий...">
+                            <input type="text" class="form-input form-input__comment"
+                                placeholder="Введите ваш комментарий...">
                         </div>
                         <div class="form-btn" href="">
                             ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
