--- a/index.html
+++ b/index.html
@@ -126,29 +126,83 @@
     
                     <div class="catalog-list">
                         <div class="catalog-item">
-                            <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
-                            <hr>
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
+                            </div>
                             <div class="catalog-about">
-                                <h3>Урны</h3>
-                                <p>В данном каталоге вы найдете урны из разных материалов, разных ценовых категорий.</p>
+                                <h4>Кованые изделия</h4>
+                            </div>
+                        </div>
+                        <div class="catalog-item">
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
+                            </div>
+                            <div class="catalog-about">
+                                <h4>Урны перфорации</h4>
+                            </div>
+                        </div>
+                        <div class="catalog-item">
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
+                            </div>
+                            <div class="catalog-about">
+                                <h4>Пепельницы</h4>
+                            </div>
+                        </div>
+                        <div class="catalog-item">
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
+                            </div>
+                            <div class="catalog-about">
+                                <h4>Для раздельного мусора</h4>
+                            </div>
+                        </div>
+                        <div class="catalog-item">
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
+                            </div>
+                            <div class="catalog-about">
+                                <h4>Деревянные урны</h4>
+                            </div>
+                        </div>
+                        <div class="catalog-item">
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
+                            </div>
+                            <div class="catalog-about">
+                                <h4>Для собачих площадок</h4>
                             </div>
                         </div>
                         <div class="catalog-item">
                             <div class="img-wrap">
                                 <img class="catalog-img" src="./assets/img/lavka.jpg" alt="">
                             </div>
-                            <hr>
                             <div class="catalog-about">
-                                <h3>Лавки</h3>
-                                <p>В данном каталоге вы найдете лавки из разных материалов, разных ценовых категорий.</p>
+                                <h4>Лавки</h4>
                             </div>
                         </div>
                         <div class="catalog-item">
-                            <img class="catalog-img" src="./assets/img/art.jpg" alt="">
-                            <hr>
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/art.jpg" alt="">
+                            </div>
                             <div class="catalog-about">
-                                <h3>Ортопедические основания</h3>
-                                <p>В данном каталоге вы найдете ортопедические основания разных ценовых категорий.</p>
+                                <h4>Основания "Эконом"</h4>
+                            </div>
+                        </div>
+                        <div class="catalog-item">
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/art.jpg" alt="">
+                            </div>
+                            <div class="catalog-about">
+                                <h4>Основания "Стандарт"</h4>
+                            </div>
+                        </div>
+                        <div class="catalog-item">
+                            <div class="img-wrap">
+                                <img class="catalog-img" src="./assets/img/art.jpg" alt="">
+                            </div>
+                            <div class="catalog-about">
+                                <h4>Основания "Укрепленные"</h4>
                             </div>
                         </div>
                     </div>
