--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         <input class="search-bar" type="text" placeholder="Поиск по сайту...">
                         <!-- <img src="./assets/img/search.svg" alt="search"> -->
                     </div>
-                    <div class="header-btn" href="">
-                        ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
+                    <div class="header-btn">
+                       <a href="#forma">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ</a> 
                     </div>
                 </div>
             </div>
@@ -48,7 +48,7 @@
             <div class="container">
                 <ul class="list">
                     <li class="list__item">
-                        Каталог
+                        <a href="#catalog">Каталог</a>
                     </li>
                     <li class="list__item">
                         Спец-предложения
@@ -63,7 +63,7 @@
                         Доставка
                     </li>
                     <li class="list__item">
-                        Оплата
+                        <a href="#pay">Оплата</a> 
                     </li>
                     <li class="list__item">
                         Контакты
@@ -72,7 +72,7 @@
             </div>
         </div>
     </header>
-    <section class="catalog">
+    <section class="catalog" id="catalog"> 
         <div class="container">
             <div class="catalog-wrap">
                 <h2 class="catalog-title title">⋯ Каталог ⋯</h2>
@@ -204,7 +204,7 @@
                             <div class="catalog-about">
                                 <h4>Основания "Укрепленные"</h4>
                             </div>
-                        </div>
+                        </div>                  
                     </div>
                 </div>
             </div>
@@ -222,7 +222,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="pay">
         <div class="pay">
             <div class="container">
                 <div class="pay-wrap">
@@ -240,7 +240,7 @@
     <section>
         <div class="send-form">
             <div class="container">
-                <div class="form-wrapper">
+                <div class="form-wrapper" id="forma">
                     <form action="send" class="form" method="POST">
                         <h3 class="form-title">⋯ Получить бесплатную консультацию ⋯</h3>
                         <div class="form-item">
@@ -272,6 +272,16 @@
                         </div>
                     </form>
                     <img class="form-bg" src="./assets/img/form-bg.jpg" alt="form-bg">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="about">
+            <div class="container">
+                <div class="about-wrap">
+                    <p class="typing-demo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis cum facilis sit similique, molestias, nihil sequi laborum mollitia placeat deleniti suscipit dolorem impedit delectus, commodi beatae animi minima dolore fuga unde cupiditate! Culpa perspiciatis, sed iure minus repellat ut illo distinctio voluptas accusantium, omnis quam a porro quas, numquam in.</p>
+                    <h3 class="about-logo">Лавки, ортопедические основания</h3>                  
                 </div>
             </div>
         </div>
