добавление страницы категорий

--- a/category.html
+++ b/category.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Урна ЯР</title>
+    <link rel="stylesheet" href="./css/category.css">
     <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/pay.css">
@@ -75,7 +76,7 @@
     <section class="catalog" id="catalog"> 
         <div class="container">
             <div class="catalog-wrap">
-                <h2 class="catalog-title title">⋯ Каталог ⋯</h2>
+                <h2 class="catalog-title title">⋯ Урны перфорации ⋯</h2>
                 <div class="catalog-split">
                     <div class="catalog-ul">
                         <h3 class="cat__title">
@@ -83,7 +84,7 @@
                         </h3>
                         <ul class="catalog-cat">
                             <li class="cat__item">
-                                <a class="cat__a" href="./category.html">Перфорация</a>
+                                <a class="cat__a" href="./index.html">Перфорация</a>
                             </li>
                             <li class="cat__item">
                                 <a class="cat__a" href="">Кованые</a>
@@ -124,194 +125,125 @@
                         </ul>
                     </div>
     
-                    <div class="catalog-list">
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                    <div class="category-list">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Спец предложения</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Перфорация</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Кованные</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Деревянные</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Пепельницы</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Для раздельного мусора</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Для собачих площадок</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Лавки</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
+                        <div class="category-item">
+                            <a href="./item.html" class="catalog-a">
                                 <div class="img-wrap">
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
-                                    <h4>Основания "Эконом"</h4>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
-                                <div class="img-wrap">
-                                    <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
-                                </div>
-                                <div class="catalog-about">
-                                    <h4>Основания "Стандарт"</h4>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="catalog-item">
-                            <a href="./category.html" class="catalog-a">
-                                <div class="img-wrap">
-                                    <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
-                                </div>
-                                <div class="catalog-about">
-                                    <h4>Основания "Укрепленные"</h4>
+                                    <h4>Урна 1</h4>
+                                    <div class="cat-price">
+                                        2800 р.
+                                    </div>
                                 </div>
                             </a>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="about">
-            <div class="container">
-                <div class="about-wrap">
-                    <h3 class="about-logo">Урны для мусора, уличные урны, урны пепельницы, урны металлические</h3>
-                    <p class="typing-demo">Мы предлагаем Вам различные виды урн для мусора, как готовых, так и по Вашим
-                        эскизам. Урны проходят порошковую окраску и соответствуют санитарным нормам. Возможна покраска в
-                        любой цвет. Окраска выполняется по таблице RAL.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="pay">
-        <div class="pay">
-            <div class="container">
-                <div class="pay-wrap">
-                    <h3 class="pay-title title">⋯ Оплата ⋯</h3>
-                    <div class="pay-text">
-                        После выбора нужного для вас товара из ассортимента оставте заявку на консультацию.
-                        Для этого заполните форму ниже и мы с вами свяжемся для уточнения деталей. Оплата осуществляется
-                        удобным для
-                        вас способом
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="send-form">
-            <div class="container">
-                <div class="form-wrapper" id="forma">
-                    <form action="send" class="form" method="POST">
-                        <h3 class="form-title">⋯ Получить бесплатную консультацию ⋯</h3>
-                        <div class="form-item">
-                            <label class="form-label" for="form-input__name">Имя:</label>
-                            <input type="text" class="form-input form-input__name" placeholder="Введите имя...">
-                        </div>
-                        <div class="form-item">
-                            <label class="form-label" for="form-input__last-name">Фамилия:</label>
-                            <input type="text" class="form-input form-input__last-name"
-                                placeholder="Введите фамилию...">
-                        </div>
-                        <div class="form-item">
-                            <label class="form-label" for="form-input__tel">Номер телефона:</label>
-                            <input type="text" class="form-input form-input__tel"
-                                placeholder="Введите номер телефона...">
-                        </div>
-                        <div class="form-item">
-                            <label class="form-label" for="form-input__mail">Номер телефона:</label>
-                            <input type="text" class="form-input form-input__mail"
-                                placeholder="Введите адресс почты...">
-                        </div>
-                        <div class="form-item">
-                            <label class="form-label" for="form-input__comment">Ваш комментарий:</label>
-                            <input type="text" class="form-input form-input__comment"
-                                placeholder="Введите ваш комментарий...">
-                        </div>
-                        <div class="form-btn" href="">
-                            ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
-                        </div>
-                    </form>
-                    <img class="form-bg" src="./assets/img/form-bg.jpg" alt="form-bg">
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="about">
-            <div class="container">
-                <div class="about-wrap">
-                    <p class="typing-demo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis cum facilis sit similique, molestias, nihil sequi laborum mollitia placeat deleniti suscipit dolorem impedit delectus, commodi beatae animi minima dolore fuga unde cupiditate! Culpa perspiciatis, sed iure minus repellat ut illo distinctio voluptas accusantium, omnis quam a porro quas, numquam in.</p>
-                    <h3 class="about-logo">Лавки, ортопедические основания</h3>                  
                 </div>
             </div>
         </div>
