1 этап создания страницы товара

--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
                                     <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
                                 </div>
                                 <div class="catalog-about">
+                                    <h4>Урны металл</h4>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="catalog-item">
+                            <a href="./category.html" class="catalog-a">
+                                <div class="img-wrap">
+                                    <img class="catalog-img" src="./assets/img/urna.jpg" alt="">
+                                </div>
+                                <div class="catalog-about">
                                     <h4>Перфорация</h4>
                                 </div>
                             </a>
