--- a/item.html
+++ b/item.html
@@ -40,7 +40,7 @@
                         <!-- <img src="./assets/img/search.svg" alt="search"> -->
                     </div>
                     <div class="header-btn">
-                       <a href="#forma">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ</a> 
+                        <a href="#forma">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ</a>
                     </div>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                         Доставка
                     </li>
                     <li class="list__item">
-                        <a href="#pay">Оплата</a> 
+                        <a href="#pay">Оплата</a>
                     </li>
                     <li class="list__item">
                         Контакты
@@ -73,7 +73,7 @@
             </div>
         </div>
     </header>
-    <section class="catalog" id="catalog"> 
+    <section class="catalog" id="catalog">
         <div class="container">
             <div class="catalog-wrap">
                 <div class="tovar-split">
@@ -123,9 +123,125 @@
                             </li>
                         </ul>
                     </div>
-    
+
                     <div class="tovar-wrap">
                         <h3 class="tovar-title"> Урна кованная </h3>
+                        <span class="tovar-line"></span>
+                        <div class="tovar-item-split">
+                            <div class="tovar-desc">
+                                <div class="tovar-item">
+                                    <div class="tovar-tables">
+                                        <table class="iksweb">
+                                            <thead>
+                                                <tr>
+                                                    <th colspan="4" style="text-align: center">Наименование</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>Обьем</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Метал</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Габариты</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Вес</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Коробка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                </tr>
+                                                <tr>
+                                                    <th colspan="4" style="text-align: center">Цена</th>
+                                                </tr>
+                                                <tr>
+                                                    <td>От 1 шт.</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>От 100 шт.</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>От 200 шт.</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                    <td>Ячейка</td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <div class="tovar-text">
+                                    <ul>
+                                        <li class="tovar-elem">
+                                            <p><b>Материал: </b>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                                Aperiam earum voluptatum rem vel officiis corrupti! Cum, id! Voluptatibus,
+                                                libero maiores!</P>
+                                        </li>
+                                        <li class="tovar-elem">
+                                            <p><b>Цвета: </b>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Suscipit rerum dolores laudantium iste. Odio pariatur incidunt quis iusto
+                                                qui excepturi.</P>
+                                        </li>
+                                        <li class="tovar-elem">
+                                            <p><b>Покрытие: </b>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                                                Mollitia alias corrupti laboriosam recusandae, cupiditate nulla neque modi
+                                                optio architecto similique?</P>
+                                        </li>
+                                        <li class="tovar-elem">
+                                            <p><b>Тип упаковки: </b>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                Dignissimos, optio. Quia a fugiat nostrum omnis corrupti, obcaecati pariatur
+                                                minus laboriosam.</P>
+                                        </li>
+                                        <li class="tovar-elem">
+                                            <p><b>Наличие пепельницы: </b>Lorem ipsum dolor sit amet consectetur adipisicing
+                                                elit. Pariatur minus dolore, sit ullam dolor repellendus tempora. Asperiores
+                                                quasi eum ex.</P>
+                                        </li>
+                                        <li class="tovar-elem">
+                                            <p><b>Доп Описание: </b>Lorem ipsum dolor sit, amet consectetur adipisicing
+                                                elit. Unde reprehenderit expedita sunt vero sed veritatis, commodi incidunt
+                                                consequatur voluptatem reiciendis!</P>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="tovar-imgs">
+                                <div class="main_img">
+                                    <img src="./assets/img/m.jpg">
+                                </div>
+    
+                                <div class="img_list">
+                                    <img src="./assets/img/1.jpg">
+                                    <img src="./assets/img/2.jpg">
+                                    <img src="./assets/img/3.jpg">
+                                    <img src="./assets/img/4.jpg">
+                                    <img src="./assets/img/5.jpg">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
