--- a/item.html
+++ b/item.html
@@ -234,6 +234,7 @@
                                 </div>
     
                                 <div class="img_list">
+                                    <img src="./assets/img/m.jpg">
                                     <img src="./assets/img/1.jpg">
                                     <img src="./assets/img/2.jpg">
                                     <img src="./assets/img/3.jpg">
