Предупреждение на странице товара

--- a/item.html
+++ b/item.html
@@ -241,6 +241,7 @@
                                     <img src="./assets/img/4.jpg">
                                     <img src="./assets/img/5.jpg">
                                 </div>
+                                <p>Цвет фотографии искажает монитор компьютера. Уточните цвет у менеджера или ориентируйтесь по таблице RAL</p>
                             </div>
                         </div>
                     </div>
