Добавлены ссылки в Navbar

--- a/category.html
+++ b/category.html
@@ -39,9 +39,11 @@
                         <input class="search-bar" type="text" placeholder="Поиск по сайту...">
                         <!-- <img src="./assets/img/search.svg" alt="search"> -->
                     </div>
-                    <div class="header-btn">
-                       <a href="#forma">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ</a> 
-                    </div>
+                    <a class="btn-link" href="#forma">
+                        <div class="header-btn">
+                            ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
+                         </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -52,22 +54,22 @@
                         <a href="./index.html">Главная</a>
                     </li>
                     <li class="list__item">
-                        <a href="#catalog">Каталог</a>
+                        <a href="./index.html">Каталог</a>
                     </li>
                     <li class="list__item">
-                        О компании
+                        <a href="./about.html">О компании</a> 
                     </li>
                     <li class="list__item">
-                        Готовые проекты
+                        <a href="./index.html">Готовые проекты</a>   
                     </li>
                     <li class="list__item">
-                        Доставка
+                        <a href="./delivery.html">Доставка</a>
                     </li>
                     <li class="list__item">
-                        <a href="#pay">Оплата</a> 
+                        <a href="./pay.html">Оплата</a> 
                     </li>
                     <li class="list__item">
-                        Контакты
+                        <a href="./contacts.html">Контакты</a> 
                     </li>
                 </ul>
             </div>
