--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
                         <input class="search-bar" type="text" placeholder="Поиск по сайту...">
                         <!-- <img src="./assets/img/search.svg" alt="search"> -->
                     </div>
-                    <div class="header-btn">
-                       <a href="#forma">ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ</a> 
-                    </div>
+                    <a class="btn-link" href="#forma">
+                        <div class="header-btn">
+                            ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
+                         </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -52,22 +54,22 @@
                         <a href="./index.html">Главная</a>
                     </li>
                     <li class="list__item">
-                        <a href="#catalog">Каталог</a>
+                        <a href="./index.html">Каталог</a>
                     </li>
                     <li class="list__item">
-                        О компании
+                        <a href="./about.html">О компании</a> 
                     </li>
                     <li class="list__item">
-                        Готовые проекты
+                        <a href="./index.html">Готовые проекты</a>   
                     </li>
                     <li class="list__item">
-                        Доставка
+                        <a href="./delivery.html">Доставка</a>
                     </li>
                     <li class="list__item">
-                        <a href="#pay">Оплата</a> 
+                        <a href="./pay.html">Оплата</a> 
                     </li>
                     <li class="list__item">
-                        Контакты
+                        <a href="./contacts.html">Контакты</a> 
                     </li>
                 </ul>
             </div>
@@ -87,22 +89,22 @@
                                 <a class="cat__a" href="./category.html">Перфорация</a>
                             </li>
                             <li class="cat__item">
-                                <a class="cat__a" href="">Кованые</a>
+                                <a class="cat__a" href="./category.html">Кованые</a>
                             </li>
                             <li class="cat__item">
-                                <a class="cat__a" href="">Деревянные</a>
+                                <a class="cat__a" href="./category.html">Деревянные</a>
                             </li>
                             <li class="cat__item">
-                                <a class="cat__a" href="">Пепельницы</a>
+                                <a class="cat__a" href="./category.html">Пепельницы</a>
                             </li>
                             <li class="cat__item">
-                                <a class="cat__a" href="">Для раздельного мусора</a>
+                                <a class="cat__a" href="./category.html">Для раздельного мусора</a>
                             </li>
                             <li class="cat__item">
-                                <a class="cat__a" href="">Деревянные</a>
+                                <a class="cat__a" href="./category.html">Металлические</a>
                             </li>
                             <li class="cat__item">
-                                <a class="cat__a" href="">Для собачих площадок</a>
+                                <a class="cat__a" href="./category.html">Для собачих площадок</a>
                             </li>
                         </ul>
                         <h3 class="cat__title">Лавки</h3>
@@ -267,7 +269,7 @@
         <div class="pay">
             <div class="container">
                 <div class="pay-wrap">
-                    <h3 class="pay-title title">⋯ Оплата ⋯</h3>
+                    <h3 class="pay-title title"></h3>
                     <div class="pay-text">
                         После выбора нужного для вас товара из ассортимента оставте заявку на консультацию.
                         Для этого заполните форму ниже и мы с вами свяжемся для уточнения деталей. Оплата осуществляется
@@ -308,9 +310,11 @@
                             <input type="text" class="form-input form-input__comment"
                                 placeholder="Введите ваш комментарий...">
                         </div>
-                        <div class="form-btn" href="">
-                            ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
-                        </div>
+                        <a href="" class="btn-link">
+                            <div class="form-btn">
+                                ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
+                            </div>
+                        </a>
                     </form>
                     <img class="form-bg" src="./assets/img/form-bg.jpg" alt="form-bg">
                 </div>
